vlib/v/checker/tests/generic_sumtype_decl_err_d.vv
type Fn[T] = fn (string) T

type Fnn = fn (string) string

type Parser = Fn | Fnn

fn main() {
	println('hello')
}
